[package]
name = "sov-modules-stf-blueprint"
description = "Defines a generic state transition function for use with the Sovereign SDK module system"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"], optional = true }
hex = { workspace = true }

# WARNING: The `stf-blueprint` crate should NOT depend on any Sovereign module.
sov-rollup-interface = { path = "../../rollup-interface", version = "0.3" }
sov-state = { path = "../sov-state", version = "0.3" }
sov-modules-api = { path = "../sov-modules-api", version = "0.3" }
risc0-cycle-macros = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["std"], optional = true }
risc0-zkvm-platform = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["server"], optional = true }

[features]
bench = [
	"risc0-cycle-macros",
	"risc0-cycle-macros?/bench",
	"risc0-zkvm",
	"risc0-zkvm-platform",
	"sov-modules-api/bench",
	"sov-state/bench",
]
default = []
native = [
	"jsonrpsee",
	"sov-modules-api/native",
	"sov-rollup-interface/native",
	"sov-state/native",
	"tokio",
]
test-utils = []
